made few changes in UI of pages

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,6 +15,7 @@ body {
 
 /* ...existing code... */
 .top-bar {
+
   background-color: #ffffff; /* White background */
   color: #0072BC;            /* Blue text */
   display: flex;
@@ -39,6 +40,7 @@ box-shadow: 0 4px 16px rgba(0,0,0,0.08); /* Soft shadow at bottom */
 }
 
 .top-bar h1 {
+  
   font-size: 26px;
   font-weight: 600;
   text-align: center;
@@ -46,6 +48,7 @@ box-shadow: 0 4px 16px rgba(0,0,0,0.08); /* Soft shadow at bottom */
   font-family: 'Segoe UI', sans-serif;
 }
 .top-bar h2 {
+
     color: #74B843;
   font-size: 14px;
   font-weight: 400;
@@ -55,6 +58,7 @@ box-shadow: 0 4px 16px rgba(0,0,0,0.08); /* Soft shadow at bottom */
 }
 
 header {
+    overflow-x: hidden;
   background-color: #ffffff;
   color: white;
   padding: 20px;
@@ -289,6 +293,7 @@ a:hover {
 }
 
 .mission-title {
+  color: #005b9f;
   font-size: 2.2rem;
   font-weight: 900;
   display: flex;
@@ -308,6 +313,7 @@ a:hover {
 }
 
 .mission-intro {
+  color: #74B843;
   font-size: 1.1rem;
   font-style: italic;
   font-weight: 500;
@@ -425,6 +431,7 @@ a:hover {
 /* services pages */
 /* Services Section */
 .services-section {
+  margin-top: -65px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -439,16 +446,19 @@ a:hover {
 }
 
 .services-image img {
-    width: auto;
+    width: 45%;
     max-width: 500px;
     height: auto;
+    max-height: 400px;
     object-fit: cover;
+    margin-top: 150px;
     border-radius: 8px;
     box-shadow: 0 4px 16px rgba(0,0,0,0.1);
 }
 
 .services-title {
-    font-size: 2.2rem;
+  color: #005b9f;
+    font-size: 2.0rem;
     font-weight: 900;
     margin-bottom: 10px;
 }
@@ -481,6 +491,7 @@ a:hover {
         padding: 30px 5%;
     }
     .services-image img {
+      margin-top: 0%;
         max-width: 100%;
     }
     .services-title {
@@ -499,14 +510,15 @@ a:hover {
 
 /* Slider Styles */
 .services-slider-section {
-    margin-top: 40px;
+    margin-top: -50px;
     padding: 40px 5%;
     text-align: center;
 }
 
 .services-slider-title {
-    font-size: 2rem;
-    font-weight: bold;
+  color: #005b9d;
+    font-size: 2.5rem;
+    font-weight: 900px;
     margin-bottom: 20px;
 }
 
