made few UI adjustments in team page and added the functionality of email in footer

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -493,7 +493,7 @@ a:hover {
     }
     .services-image img {
       margin-top: 0%;
-        max-width: 100%;
+        max-width: 900px;
     }
     .services-title {
         font-size: 1.8rem;
@@ -664,11 +664,13 @@ a:hover {
 /* facilities page */
 /* CSS */
 .equipment-section {
+  margin-top: -10px;
   padding: 20px;
   background-color: #ffffff;
   font-family: Arial, sans-serif;
 }
 .equipment-section h1 {
+  margin-top:auto;
   font-size: 2.0rem;
   color: #005b9f;
   font-weight: 900px;
@@ -677,9 +679,11 @@ a:hover {
 }
 
 .divider {
-  margin: 10px 0 20px;
+  /* margin: 10px 0 20px; */
+  width: 80%;
   border: none;
   height: 2px;
+  
   background: #74B843;
 }
 
